fixed 01-css-methods html and css file as they were the wrong font size per the instructions

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,6 +1,7 @@
 .div {
 background-color: red;
 color: white;
-font-size:50px;
-font-weight: 900;
+font-size:32px;
+font-weight: bold;
+text-align: center;
 }
